--- a/submission.yaml
+++ b/submission.yaml
@@ -1,4 +1,7 @@
 CLIWindowsWSL: CHECK
+Einreichungen: CHECK
+Git101: CHECK
+Kommandoprotokolle: CHECK
 Markdown: CHECK
 SedrilaEinrichten: CHECK
 Shellprompt: CHECK
