--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
+# Python
 __pycache__/
 *.py[cod]
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
