--- a/submission.yaml
+++ b/submission.yaml
@@ -3,6 +3,12 @@ Einreichungen: CHECK
 Git101: CHECK
 Kommandoprotokolle: CHECK
 Markdown: CHECK
+RequiresAssumes: CHECK
+Schwierigkeitsstufen: CHECK
 SedrilaEinrichten: CHECK
 Shellprompt: CHECK
+Themenauswahl: CHECK
 Zeiterfassung: CHECK
+git-Funktionsweise: CHECK
+git-Zweitrepo: CHECK
+git-ignore: CHECK
