submission.yaml checked

--- a/submission.yaml
+++ b/submission.yaml
@@ -1,14 +1,14 @@
-CLIWindowsWSL: CHECK
-Einreichungen: CHECK
-Git101: CHECK
-Kommandoprotokolle: CHECK
-Markdown: CHECK
-RequiresAssumes: CHECK
-Schwierigkeitsstufen: CHECK
-SedrilaEinrichten: CHECK
-Shellprompt: CHECK
-Themenauswahl: CHECK
-Zeiterfassung: CHECK
-git-Funktionsweise: CHECK
-git-Zweitrepo: CHECK
-git-ignore: CHECK
+CLIWindowsWSL: ACCEPT
+Einreichungen: ACCEPT
+Git101: ACCEPT
+Kommandoprotokolle: ACCEPT
+Markdown: ACCEPT
+RequiresAssumes: ACCEPT
+Schwierigkeitsstufen: ACCEPT
+SedrilaEinrichten: ACCEPT
+Shellprompt: ACCEPT
+Themenauswahl: ACCEPT
+Zeiterfassung: ACCEPT
+git-Funktionsweise: ACCEPT
+git-Zweitrepo: ACCEPT
+git-ignore: ACCEPT
