--- a/submission.yaml
+++ b/submission.yaml
@@ -1,14 +1,8 @@
-CLIWindowsWSL: ACCEPT
-Einreichungen: ACCEPT
-Git101: ACCEPT
-Kommandoprotokolle: ACCEPT
-Markdown: ACCEPT
-RequiresAssumes: ACCEPT
-Schwierigkeitsstufen: ACCEPT
-SedrilaEinrichten: ACCEPT
-Shellprompt: ACCEPT
-Themenauswahl: ACCEPT
-Zeiterfassung: ACCEPT
-git-Funktionsweise: ACCEPT
-git-Zweitrepo: ACCEPT
-git-ignore: ACCEPT
+IDEWindows: CHECK
+Manpages: CHECK
+Python-Variablen: CHECK
+Shell-Grundlagen: CHECK
+Shell-Grundlagen2: CHECK
+Umgang-mit-Verzeichnissen: CHECK
+pip: CHECK
+venv: CHECK
