--- a/submission.yaml
+++ b/submission.yaml
@@ -1,5 +1,2 @@
-encoding_and_open: ACCEPT
-m_datetime: ACCEPT
-m_json1: ACCEPT
-m_os.path: REJECT
-m_random: ACCEPT
+m_os.path: CHECK
+sorted_and_sort: CHECK
