submission.yaml checked

--- a/submission.yaml
+++ b/submission.yaml
@@ -1,12 +1,12 @@
-CSSEinfuehrung: CHECK
-HTMLErsteSchritte: CHECK
-HTMLMedien: CHECK
-Python-List-Comprehensions: CHECK
-apt: CHECK
-m_argparse: CHECK
-m_hashlib: CHECK
-m_json2: CHECK
-m_pprint: CHECK
-m_subprocess: CHECK
-m_tempfile: CHECK
-sudo: CHECK
+CSSEinfuehrung: ACCEPT
+HTMLErsteSchritte: ACCEPT
+HTMLMedien: ACCEPT
+Python-List-Comprehensions: ACCEPT
+apt: ACCEPT
+m_argparse: REJECT
+m_hashlib: ACCEPT
+m_json2: ACCEPT
+m_pprint: ACCEPT
+m_subprocess: ACCEPT
+m_tempfile: ACCEPT
+sudo: ACCEPT
