--- a/submission.yaml
+++ b/submission.yaml
@@ -1,12 +1,6 @@
-CSSEinfuehrung: ACCEPT
-HTMLErsteSchritte: ACCEPT
-HTMLMedien: ACCEPT
-Python-List-Comprehensions: ACCEPT
-apt: ACCEPT
-m_argparse: REJECT
-m_hashlib: ACCEPT
-m_json2: ACCEPT
-m_pprint: ACCEPT
-m_subprocess: ACCEPT
-m_tempfile: ACCEPT
-sudo: ACCEPT
+Benutzerkonten: CHECK
+Dateiberechtigungen: CHECK
+Gruppen: CHECK
+PEP8: CHECK
+flake8: CHECK
+m_argparse: CHECK
