--- a/submission.yaml
+++ b/submission.yaml
@@ -1,6 +1,14 @@
-Benutzerkonten: ACCEPT
-Dateiberechtigungen: ACCEPT
-Gruppen: ACCEPT
-PEP8: ACCEPT
-flake8: ACCEPT
-m_argparse: ACCEPT
+ACL: CHECK
+Engineer: CHECK
+Fehler-Defekt-Versagen: CHECK
+HTMLFormulare: CHECK
+HTMLSemantik: CHECK
+HTMLTabellen: CHECK
+LICENSE: CHECK
+Professor-Solomon: CHECK
+Sherlock-Holmes: CHECK
+argparse_subcommand: CHECK
+changelog: CHECK
+m_pytest: CHECK
+m_pytest_parametrize: CHECK
+m_unittest: CHECK
