submission.yaml checked

--- a/submission.yaml
+++ b/submission.yaml
@@ -1,14 +1,14 @@
-ACL: CHECK
-Engineer: CHECK
-Fehler-Defekt-Versagen: CHECK
-HTMLFormulare: CHECK
-HTMLSemantik: CHECK
-HTMLTabellen: CHECK
-LICENSE: CHECK
-Professor-Solomon: CHECK
-Sherlock-Holmes: CHECK
-argparse_subcommand: CHECK
-changelog: CHECK
-m_pytest: CHECK
-m_pytest_parametrize: CHECK
-m_unittest: CHECK
+ACL: ACCEPT
+Engineer: ACCEPT
+Fehler-Defekt-Versagen: REJECT
+HTMLFormulare: ACCEPT
+HTMLSemantik: ACCEPT
+HTMLTabellen: ACCEPT
+LICENSE: ACCEPT
+Professor-Solomon: ACCEPT
+Sherlock-Holmes: ACCEPT
+argparse_subcommand: ACCEPT
+changelog: ACCEPT
+m_pytest: ACCEPT
+m_pytest_parametrize: ACCEPT
+m_unittest: ACCEPT
