--- a/submission.yaml
+++ b/submission.yaml
@@ -1,14 +1,19 @@
-ACL: ACCEPT
-Engineer: ACCEPT
-Fehler-Defekt-Versagen: REJECT
-HTMLFormulare: ACCEPT
-HTMLSemantik: ACCEPT
-HTMLTabellen: ACCEPT
-LICENSE: ACCEPT
-Professor-Solomon: ACCEPT
-Sherlock-Holmes: ACCEPT
-argparse_subcommand: ACCEPT
-changelog: ACCEPT
-m_pytest: ACCEPT
-m_pytest_parametrize: ACCEPT
-m_unittest: ACCEPT
+"Defekte-in-Ausdr\xFCcken": CHECK
+Fehler-Defekt-Versagen: CHECK
+IDEFirstSteps: CHECK
+IDE_debugging: CHECK
+Mathematician: CHECK
+Python-Function-Arguments-Basic: CHECK
+Unix-Systeminfo: CHECK
+beautifulsoup: CHECK
+einkaufsliste-defekt: CHECK
+einkaufsliste-defekt2: CHECK
+einkaufsliste-defekt3: CHECK
+git-Fehlerbehebung: CHECK
+m_glob: CHECK
+m_requests: CHECK
+m_sqlite3: CHECK
+m_sys: CHECK
+mlh-lsnew: CHECK
+pdb: CHECK
+printfdebugging: CHECK
